envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: rest_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: rest_route
            virtual_hosts:
            - name: rest_host
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: rest_service }
          http_filters:
          - name: envoy.router
  - name: grpc_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 6565 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: grpc_route
            virtual_hosts:
            - name: grpc_host
              domains: ["*"]
              routes:
              - match: { prefix: "/" , grpc: {}}
                route: { cluster: grpc_service }
          http_filters:
          - name: envoy.router

  clusters:
  - name: rest_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: 0.0.0.0, port_value: 8080 }}]
  - name: grpc_service
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: 0.0.0.0, port_value: 6565 }}]
